--- a/app/views/teams/my_team.html.haml
+++ b/app/views/teams/my_team.html.haml
@@ -18,7 +18,7 @@
       =link_to @team.stadium.name, @team.stadium
 
   .col-md-5
-    .panel.panel-default
+    .panel.panel-primary
       .panel-heading
         Logo
       .panel-body
