--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -26,6 +26,9 @@
               <li>
                 <%= link_to 'Finance', finance_path %>
               </li>
+              <li>
+                <%= link_to 'Matches', matches_path %>
+              </li>
             </ul>
           </li>
           <li id="league-tab">
