--- a/app/views/teams/matches.html.haml
+++ b/app/views/teams/matches.html.haml
@@ -1,6 +1,6 @@
 .page-header
   %h1
-    %i.glyphicon.glyphicon-user
+    %i.glyphicon.glyphicon-search
     Matches
 %table.table.table-striped.table-bordered.table-hover.table-condensed
   %tr
@@ -9,7 +9,7 @@
     %th Home score
     %th Away score
     %th Away
-    %th See more
+    %th
 
   - @matches.each do |match|
     %tr
@@ -18,4 +18,4 @@
       %td= match.home_score
       %td= match.away_score
       %td= match.away
-      %td
+      %td= link_to 'See more', show_match_path(match)
