Player model/views/controller imrpovements

--- a/app/views/matches/show.html.haml
+++ b/app/views/matches/show.html.haml
@@ -1,35 +1,39 @@
 .page-header
   %h1
-    %i.glyphicon.glyphicon-sound-5-1
+    %i.glyphicon.glyphicon-tag
     =@match
 
-%p
-  %h2
-    .row
-      .col-md-5
-        = @match.home.name
-      .col-md-2
-      .col-md-5
-        = @match.away.name
+
+%h2
   .row
     .col-md-5
-      -if @match.home.logo.present?
-        =image_tag @match.home.logo.thumb
-      -else
-        =image_tag @match.home.logo.default_thumb_url
-    .col-md-2.score
-      = @match.home_score
-      = '-'
-      = @match.away_score
+      = @match.home.name
+    .col-md-2
     .col-md-5
-      -if @match.away.logo.present?
-        =image_tag @match.away.logo.thumb
-      -else
-        =image_tag @match.away.logo.default_thumb_url
+      = @match.away.name
+.row
+  .col-md-5
+    -if @match.home.logo.present?
+      =image_tag @match.home.logo.thumb
+    -else
+      =image_tag @match.home.logo.default_thumb_url
+  .col-md-2.score
+    = @match.home_score
+    = '-'
+    = @match.away_score
+  .col-md-5
+    -if @match.away.logo.present?
+      =image_tag @match.away.logo.thumb
+    -else
+      =image_tag @match.away.logo.default_thumb_url
+%h4
+  Attendance:
+  = @match.attendance
 
-%p
-  %b Report:
-  %i.glyphicon.glyphicon-soccer-ball
+
+.panel.panel-primary
+  .panel-heading
+    Report:
   %table.table.table-bordered.table-condensed
     %tr
       %th Event
