--- a/app/views/teams/my_team.html.haml
+++ b/app/views/teams/my_team.html.haml
@@ -19,7 +19,7 @@
         %h4
           %i.glyphicon.glyphicon-home
           %b Stadium:
-          =link_to @team.stadium.name, @team.stadium
+          =link_to @team.stadium.name, stadium_path
     .panel.panel-primary
       .panel-heading
         Last matches
