--- a/app/views/players/show.html.haml
+++ b/app/views/players/show.html.haml
@@ -4,34 +4,53 @@
     = @player.first_name
     = @player.last_name
 
-.row
-  .col-md-3
-    %p
-      %i.glyphicon.glyphicon-star
-      %b Team:
-      = link_to @player.team.name, @player.team
-  .col-md-3
-    %p
-      %i.glyphicon.glyphicon-asterisk
-      %b Position:
-      = @player.position.name
-  .col-md-3
-    %p
-      %i.glyphicon.glyphicon-minus
-      %b Birthdate:
-      = @player.birthdate
-      = surround '(', ')' do
-        = @player.current_age
-        years old
-  .col-md-3
-    %p
-      %i.glyphicon.glyphicon-usd
-      %b Salary:
-      = @player.salary
+.panel.panel-primary
+  .panel-heading
+    %i.glyphicon.glyphicon-user
+    Overview
+  .panel-body
+    .row
+      .col-md-6
+        %h4
+          %i.glyphicon.glyphicon-star
+          %b Team:
+          = link_to @player.team.name, @player.team
+        %h4
+          %i.glyphicon.glyphicon-minus
+          %b Birthdate:
+          = @player.birthdate
+          = surround '(', ')' do
+            = @player.current_age
+            years old
+        %h4
+          %i.glyphicon.glyphicon-remove
+          %b Pause:
+          -if @player.injury_pause?
+            %i.glyphicon.glyphicon-heart
+            Injury
+          -elsif @player.cards_pause?
+            %i.glyphicon.glyphicon-book
+            Cards
+          -else
+            Nope
+      .col-md-6
+        %h4
+          %i.glyphicon.glyphicon-asterisk
+          %b Position:
+          = @player.position.name
+        %h4
+          %i.glyphicon.glyphicon-usd
+          %b Salary:
+          = @player.salary
+        %h4
+          %i.glyphicon.glyphicon-text-width
+          %b Strength:
+          = @player.strength
 
-%p
-  %i.glyphicon.glyphicon-star-empty
-  %b Skills:
+.panel.panel-primary
+  .panel-heading
+    %i.glyphicon.glyphicon-star-empty
+    Skills:
   %table.table.table-bordered.table-condensed
     %tr
       %th{:colspan => 2} Mental
@@ -73,3 +92,27 @@
       %td= @player.shots / 100
       %td
       %td
+
+.panel.panel-primary
+  .panel-heading
+    %i.glyphicon.glyphicon-camera
+    Stats:
+  %table.table.table-bordered.table-condensed
+    %tr
+      %td Goals
+      %td= @player.goals
+    %tr
+      %td Assists
+      %td= @player.assists
+    %tr
+      %td Yellow cards
+      %td= @player.yellow_cards
+    %tr
+      %td Double yellow cards
+      %td= @player.double_yellow_cards
+    %tr
+      %td Red cards
+      %td= @player.red_cards
+    %tr
+      %td Injuries
+      %td= @player.injuries
