--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -33,13 +33,8 @@
       %th Age
       %th Position
       %th Salary
-      %th Goals
-      %th Assists
-      %th Yellow cards
-      %th Double yellow cards
-      %th Red cards
-      %th Injuries
-
+      %th Goals/assists
+      %th Yellow/red cards
     - @team.players.each do |player|
       %tr
         %td= link_to player.full_name, player
@@ -47,12 +42,14 @@
         %td= player.current_age
         %td= player.position.name
         %td= player.salary
-        %td= MatchEvent.where(:event_type => "goal", :first_player => player).count
-        %td= MatchEvent.where(:event_type => "goal", :second_player => player).count
-        %td= MatchEvent.where(:event_type => "yellow card", :first_player => player).count
-        %td= MatchEvent.where(:event_type => "double yellow card", :first_player => player).count
-        %td= MatchEvent.where(:event_type => "red card", :first_player => player).count
-        %td= MatchEvent.where(:event_type => "injury", :first_player => player).count
+        %td
+          = player.goals
+          |
+          = player.assists
+        %td
+          = player.yellow_cards
+          |
+          = player.red_cards
 
 .panel.panel-primary
   .panel-heading
