--- a/app/views/teams/tactic.html.haml
+++ b/app/views/teams/tactic.html.haml
@@ -7,30 +7,30 @@
     %center
       .row.big-vertical-padding
         .col-md-3.col-md-offset-3
-          = f.collection_select(:s1_id, @team.players, :id, :full_name)
+          = f.collection_select(:s1_id, @team.available_players, :id, :full_name)
         .col-md-3
-          = f.collection_select(:s2_id, @team.players, :id, :full_name)
+          = f.collection_select(:s2_id, @team.available_players, :id, :full_name)
       .row.big-vertical-padding
         .col-md-3
-          = f.collection_select(:am1_id, @team.players, :id, :full_name)
+          = f.collection_select(:am1_id, @team.available_players, :id, :full_name)
         .col-md-3.col-md-offset-6
-          = f.collection_select(:am2_id, @team.players, :id, :full_name)
+          = f.collection_select(:am2_id, @team.available_players, :id, :full_name)
       .row.big-vertical-padding
         .col-md-3.col-md-offset-3
-          = f.collection_select(:dm1_id, @team.players, :id, :full_name)
+          = f.collection_select(:dm1_id, @team.available_players, :id, :full_name)
         .col-md-3
-          = f.collection_select(:dm2_id, @team.players, :id, :full_name)
+          = f.collection_select(:dm2_id, @team.available_players, :id, :full_name)
       .row.big-vertical-padding
         .col-md-3
-          = f.collection_select(:d1_id, @team.players, :id, :full_name)
+          = f.collection_select(:d1_id, @team.available_players, :id, :full_name)
         .col-md-3
-          = f.collection_select(:d2_id, @team.players, :id, :full_name)
+          = f.collection_select(:d2_id, @team.available_players, :id, :full_name)
         .col-md-3
-          = f.collection_select(:d3_id, @team.players, :id, :full_name)
+          = f.collection_select(:d3_id, @team.available_players, :id, :full_name)
         .col-md-3
-          = f.collection_select(:d4_id, @team.players, :id, :full_name)
+          = f.collection_select(:d4_id, @team.available_players, :id, :full_name)
       .row.big-vertical-padding
         .col-md-12
-          = f.collection_select(:gk_id, @team.players, :id, :full_name)
+          = f.collection_select(:gk_id, @team.available_players, :id, :full_name)
     .actions
       = f.submit 'Save'
